[package]
name = "domain"
version = "0.9.1-dev"
rust-version = "1.67.0"
edition = "2021"
authors = ["NLnet Labs <dns-team@nlnetlabs.nl>"]
description = "A DNS library for Rust."
documentation = "https://docs.rs/domain"
homepage = "https://github.com/nlnetlabs/domain/"
repository = "https://github.com/nlnetlabs/domain/"
readme = "README.md"
keywords = ["DNS", "domain"]
license = "BSD-3-Clause"

[lib]
name = "domain"
path = "src/lib.rs"

[dependencies]
octseq         = "0.3"
time           = "0.3.1"

rand           = { version = "0.8", optional = true }
bytes          = { version = "1.0", optional = true }
chrono         = { version = "0.4.6", optional = true, default-features = false }
futures        = { version = "0.3", optional = true }
heapless       = { version = "0.7", optional = true }
libc           = { version = "0.2.79", default-features = false, optional = true } # 0.2.79 is the first version that has IP_PMTUDISC_OMIT
#openssl       = { version = "0.10", optional = true }
ring           = { version = "0.17", optional = true }
serde          = { version = "1.0.130", optional = true, features = ["derive"] }
siphasher      = { version = "1", optional = true }
smallvec       = { version = "1.3", optional = true }
tokio          = { version = "1.33", optional = true, features = ["io-util", "macros", "net", "time", "sync", "rt-multi-thread" ] }
tokio-rustls   = { version = "0.24", optional = true, features = [] }
tokio-tfo      = { version = "0.2.0", optional = true }
rustls-pemfile = { version = "1.0", optional = true }

# XXX Force proc-macro2 to at least 1.0.69 for minimal-version build
proc-macro2    = "1.0.69"

[target.'cfg(macos)'.dependencies]
# specifying this overrides minimum-version mio's 0.2.69 libc dependency, which allows the build to work
libc = { version = "0.2.71", default-features = false, optional = true }

[features]
default     = ["std", "rand"]
bytes       = ["dep:bytes", "octseq/bytes"]
heapless    = ["dep:heapless", "octseq/heapless"]
interop     = ["bytes", "ring"]
resolv      = ["bytes", "futures", "smallvec", "std", "tokio", "libc", "rand"]
resolv-sync = ["resolv", "tokio/rt"]
serde       = ["dep:serde", "octseq/serde"]
serve       = ["bytes", "chrono/clock", "futures", "libc", "std", "tokio"]
serve-sync  = []
sign        = ["std"]
smallvec    = ["dep:smallvec", "octseq/smallvec"]
std         = []
net         = ["bytes", "futures", "std", "tokio", "tokio-rustls"]
tsig        = ["bytes", "ring", "smallvec"]
validate    = ["std", "ring"]
zonefile    = ["bytes", "std"]

# This feature should include all features that the CI should include for a
# test run. Which is everything except interop.
ci-test     = ["resolv", "resolv-sync", "sign", "std", "serde", "tsig", "validate", "zonefile"]

[dev-dependencies]
clap       = { version = "=4.3.12", features = ["derive"] }
anstream = "0.3.2"
anstyle = "=1.0.1"
clap_lex = "=0.5.0"
clap_builder = "4.3.12"
clap_derive = "4.3.12"
time = "=0.3.23"
rustls             = { version = "0" }
serde = { version = "1.0.188", features = ["derive" ] }
serde_json = "1.0.107"
serde_test         = "1.0.130"
serde_yaml         = "0.9"
tokio            = { version = "1", features = ["rt-multi-thread", "io-util", "net", "test-util"] }
tokio-native-tls = "0.3"
tokio-rustls       = { version = "0.24.1" }
webpki-roots       = { version = "0.25.2" }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[example]]
name = "readzone"
required-features = ["zonefile"]

[[example]]
name = "download-rust-lang"
required-features = ["resolv"]

[[example]]
name = "lookup"
required-features = ["resolv"]

[[example]]
name = "resolv-sync"
required-features = ["resolv-sync"]

[[example]]
name = "client"
required-features = ["std", "rand"]

[[example]]
name = "serve"
required-features = ["serve", "tokio-tfo", "tokio-rustls", "rustls-pemfile"]

[[example]]
name = "simple-proxy"
required-features = ["net", "serve"]

[[example]]
name = "client-transports"
required-features = ["net"]
